complete #K1 @0h5m Rifattorizzato il codice per rimuovere l'uso del metodo deprecato newInstance().